[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scapr"
dynamic = ["version", "description"]
authors = [{name = "Bill Melvin", email = "bill@billmelvin.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["image", "screen capture", "screen shot", "screenshot"]
requires-python = ">=3.9"
dependencies = [
    "pillow",
    "rich",
]

[project.scripts]
scapr = "scapr:scap.main"

[project.urls]
Repository = "https://github.com/wmelvin/scapr"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
ignore = [
    "ISC001",  # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
    "PLR2004", # magic value
]

[dependency-groups]
dev = [
    "flit>=3.9.0",
    "pytest>=7.4.4",
    "ruff>=0.11.9",
]
